# copilot-api-proxy

./: .claudeignore  .gitignore  Caddyfile  Makefile  PKGBUILD  README.md  config.env  config.py  copilot-api-proxy.service  copilot-api-proxy.socket  copilot-proxy-wrapper  install.sh  main.py  pyproject.toml  requirements.txt  security-audit.sh  uv.toml  view-readme.sh
.github/agents/: filesystem-analyst.agent.md  hunter.agent.md  kernel-analyst.agent.md  llm-orchestration-architect-short.agent.md  memory-analyst.agent.md  persistence-analyst.agent.md  python-test-writer.agent.md  test.agent.md
.github/workflows/: release.yml
templates/: auth_success.html  base.html  dashboard.html  device_flow.html  index.html  login.html
tests/: conftest.py  test_chat_messages.py  test_config.py  test_copilot_token.py  test_coverage_boost.py  test_device_flow.py  test_endpoints.py  test_proxy_pipeline.py
