[project]
name = "copilot-api-proxy"
version = "2.0.1"
description = "OpenClaude / Claude Code GitHub Copilot + xAI Grok Proxy (Direct TLS)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "uvloop>=0.21.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "slowapi>=0.1.9",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "json-log-formatter>=0.5.0",
]

[project.scripts]
copilot-api-proxy = "copilot_proxy_wrapper:main"

[project.urls]
Homepage = "https://github.com/dcx7c5/copilot-api-proxy"
Repository = "https://github.com/dcx7c5/copilot-api-proxy.git"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "respx>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "webapi: pure JSON/REST API endpoints (no HTML rendering)",
    "html: HTML page / template rendering tests",
]

