[project]
name = "copilot-api-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography==46.0.6",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "json-log-formatter>=1.1.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "slowapi>=0.1.9",
    "uvicorn>=0.41.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.5",
]
test = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.22.0",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "webapi: pure JSON/REST API endpoint tests (no HTML)",
    "html: HTML page / template rendering tests",
]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["main", "config"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 50
